--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -185,7 +185,7 @@ S_B_1 : "Aᴅᴅ ᴍᴇ"
 S_B_2 : "Sᴜᴘᴘᴏʀᴛ"
 S_B_3 : "Aᴅᴅ ᴍᴇ ɪɴ ʏᴏᴜʀ ɢʀᴏᴜᴘ"
 S_B_4 : "Hᴇʟᴘ & Cᴏᴍᴍᴀɴᴅs"
-S_B_5 : "Dᴇᴠᴇʟᴏᴘᴇʀ"
+S_B_5 : "✰ ❍͢͠𝐰𝐧𝐞𝐫 ✰"
 S_B_6 : "Cʜᴀɴɴᴇʟ"
 S_B_7 : "Sᴏᴜʀᴄᴇ ᴄᴏᴅᴇ"
 S_B_8 : "👀 ʏᴏᴜᴛᴜʙᴇ 👀"
